src/test/resources/valid_programs/if__simple.notc
void main() {
    if (true)
        printInt(1);

    if (false)
        printInt(0);
}
