src/test/resources/semantic_errors/void_return.notc
void fun() {
    return 453;
}

void main() {
    fun();
}
